--- a/src/components/LayoutMain/SliderRegion/Slider/Slider.css
+++ b/src/components/LayoutMain/SliderRegion/Slider/Slider.css
@@ -76,7 +76,7 @@ html,body{
     cursor: pointer;
     transition: all .3s ease;
     background-color: rgba(1, 1, 1, 0);
-    font-size: 0px;
+    font-size: 0;
 }
 
 /* Стрелка влево */
@@ -131,7 +131,7 @@ html,body{
 }
 .slider .slick-dots li{
     list-style: none;
-    margin: 0px 10px;
+    margin: 0 10px;
 }
 .slider .slick-dots button{
     font-size: 0;
