--- a/src/components/SimpleCard/SimpleCard.css
+++ b/src/components/SimpleCard/SimpleCard.css
@@ -1,11 +1,9 @@
 .slick-track {
     position: relative;
     top: 0;
-    left: 0;
     display: block;
     transform: translateZ(0);
     width:900%;
-    left:-100%;
 }
 
 .slick-track.slick-center {
@@ -96,8 +94,6 @@
 }
 
 .slick-list.dragging {
-    cursor: pointer;
-    cursor: hand
 }
 
 .heading {
@@ -4802,7 +4798,7 @@ h6 {
 
 .footer .socials__text {
     text-transform: uppercase;
-    font-family: "Proxima Nova";
+    font-family: "Prorima Nova", serif;
 
 }
 
@@ -5054,7 +5050,7 @@ h6 {
     text-transform: uppercase;
     font-size: .80rem;
     font-weight: 700;
-    font-family: "Proxima Nova";
+    font-family: "Proxima Nova", serif;
 }
 
 @media(max-width:576px) {
@@ -5250,7 +5246,6 @@ h6 {
 
 .player .progress__dot {
     position: absolute;
-    bottom: .5px;
     cursor: pointer;
     width: 10px;
     height: 10px;
@@ -5296,7 +5291,6 @@ h6 {
 
 .player .progress-mobile-slider__dot {
     position: absolute;
-    bottom: .5px;
     cursor: pointer;
     width: 10px;
     height: 10px;
@@ -5526,7 +5520,6 @@ h6 {
 
 .player .volume-slider__dot {
     position: absolute;
-    bottom: .5px;
     cursor: pointer;
     width: 10px;
     height: 10px;
@@ -6277,19 +6270,11 @@ svg:not(:root).svg-inline--fa {
 .swiper-button-prev {
     position: absolute;
     top: 50%;
-    width: 27px;
-    width: calc(var(--swiper-navigation-size)/44*27);
-    height: 44px;
-    height: var(--swiper-navigation-size);
-    margin-top: -22px;
-    margin-top: calc(var(--swiper-navigation-size)*-1/2);
     z-index: 10;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: var(--swiper-theme-color);
-    color: var(--swiper-navigation-color, var(--swiper-theme-color))
 }
 
 .swiper-button-next.swiper-button-disabled,
@@ -6301,10 +6286,6 @@ svg:not(:root).svg-inline--fa {
 
 .swiper-button-next:after,
 .swiper-button-prev:after {
-    font-family: swiper-icons;
-    font-size: 44px;
-    font-size: var(--swiper-navigation-size);
-    text-transform: none !important;
     letter-spacing: 0;
     text-transform: none;
     -moz-font-feature-settings: normal;
@@ -6597,7 +6578,6 @@ button.swiper-pagination-bullet {
     border-left: 4px solid var(--swiper-theme-color);
     border-bottom: 4px solid var(--swiper-theme-color);
     border-right: 4px solid var(--swiper-theme-color);
-    border: 4px solid var(--swiper-preloader-color, var(--swiper-theme-color));
     border-radius: 50%;
     border-top: 4px solid transparent
 }
@@ -6862,8 +6842,6 @@ button.swiper-pagination-bullet {
 }
 
 .tns-t-ct {
-    width: 2333.3333333%;
-    width: 2333.33333%;
     position: absolute;
     right: 0
 }
@@ -6875,8 +6853,6 @@ button.swiper-pagination-bullet {
 }
 
 .tns-t-ct>div {
-    width: 1.4285714%;
-    width: 1.42857%;
     height: 10px;
     float: left
 }
@@ -7095,7 +7071,6 @@ button.swiper-pagination-bullet {
     border-radius: 50%;
     background-color: #fff;
     box-sizing: border-box;
-    box-shadow: .5px .5px 2px 1px rgba(0, 0, 0, .32)
 }
 
 .vue-slider-dot-handle-focus {
